--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:600,700|Open+Sans:400,600,700&display=swap');
+
+// @import 'tailwindcss/base';
+
+// @import 'tailwindcss/components';
+
+// @import 'tailwindcss/utilities'; 
+
+@import './styles/base.scss';
